fix: override divi styles for sidebar spacing and superscript

--- a/wp-content/plugins/bd4d/assets/css/src/main.scss
+++ b/wp-content/plugins/bd4d/assets/css/src/main.scss
@@ -107,3 +107,14 @@ div.form-fields {
 		}
 	}
 }
+
+/* override divi styles */
+html body {
+	.et_pb_post {
+		margin-bottom: 0;
+	}
+
+	sup {
+		font-size: 11px;
+	}
+}
